# JPG-to-ASCII-Artwork-Converter

./: .gitignore  README.md  requirements.txt  setup.cfg
src/jpg_ascii_converter/cli/: main.py
src/jpg_ascii_converter/constants/: __init__.py
src/jpg_ascii_converter/service/: converter.py
tests/: test_converter.py
