[metadata]
name = jpgasciiconverter
version = attr: jpg_ascii_converter._version.__version__
author = author
author_email = author@email.com
classifiers =
    Develop Status :: 3 - Alpha
    Intended Audience :: Developers, Python Developers
    License :: GNU Public License v3.0
    Operation System :: OS Independent
    Programming Language :: Python 3
    Programming Language :: Python 3.12
    Topic :: Software Development :: Image to Text Conversion Tools
description = jpgasciiconverter Framework
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = file:requirements.txt
python_requires = >=3.12
include_package_data = true
packages = find:
package_dir = 
    = src

[options.package_data]
* = 
    *.txt
jpgasciiconverter = 
    templates/**/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    jpg_ascii = jpg_ascii_converter.cli.main:main


[bdist_wheel]
universal = true
